# FlameRing

./: .gitignore  Cargo.toml  README.md
src/: animation.rs  button.rs  logic.rs  main.rs  proximity.rs  state_machine.rs
